@@ -13,6 +13,10 @@ For a complete change history, please see the CVS log comments.
 CHANGES - Current Version:
 --------------------------
 
+- tab2tab: Set dataset bounds only after setting spatialref to prevent
+  default coordsys bounds from taking precedence when bounds are 
+  available in source dataset (bug 1511)
+
 - Coordsys false easting and northing are in the units of the coordsys, not
   necessarily meters.  Adjusted mitab_coordsys.cpp to reflect this. 
   http://bugzilla.remotesensing.org/show_bug.cgi?id=1113
@@ -714,5 +718,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.160 2006-05-09 20:21:29 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.161 2006-06-28 10:21:56 dmorissette Exp $
 ------------
